# braintrust-modal-template

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
evals/: __init__.py  eval_example.py  parameters.py
src/: config.py  eval_server.py
