[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "braintrust-modal-template"
version = "0.1.0"
description = "Template for deploying Braintrust evaluations to Modal"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
keywords = [
    "braintrust",
    "modal",
    "evaluation",
    "llm",
    "ai",
]

dependencies = [
    "braintrust[cli]~=0.3.6",
    "autoevals>=0.0.130",
    "modal>=1.2.0",
    "python-dotenv>=1.1.1",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

